add translation links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
             <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
             <small>{{ site.tagline }}</small>
           </h3>
+          {{ page.translations }}
         </div>
       </div>
 
