--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,7 +9,8 @@
   </div>
 
   <nav class="sidebar-nav">
-    <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}/">Home</a>
+    {% capture language_prefix %}{% if include.lang && include.lang != 'en' %}/{{ include.lang }}/{% else %}/{% endif %}{% endcapture %}
+    <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}{{ language_prefix }}">{{ site.t[include.lang].home }}</a>
 
     {% comment %}
       The code below dynamically generates a sidebar nav of pages with
@@ -20,14 +21,12 @@
     {% for node in pages_list %}
       {% if node.title != null %}
         {% if node.layout == "page" %}
-          <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">{{ node.title }}</a>
+          <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{language_prefix}}{{ node.url | remove_first:'/' }}">{{ node.title }}</a>
         {% endif %}
       {% endif %}
     {% endfor %}
 
-    <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
-    <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
-    <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
+    <span class="sidebar-nav-item">v{{ site.version }}</span>
   </nav>
 
   <div class="sidebar-item">
