--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,19 +9,15 @@
   </div>
 
   <nav class="sidebar-nav">
-    {% capture language_prefix %}{% if include.lang && include.lang != 'en' %}/{{ include.lang }}/{% else %}/{% endif %}{% endcapture %}
-    <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}{{ language_prefix }}">{{ site.t[include.lang].home }}</a>
-
-    {% comment %}
-      The code below dynamically generates a sidebar nav of pages with
-      `layout: page` in the front-matter. See readme for usage.
-    {% endcomment %}
+    {% capture language %}{% if include.lang %}{{ include.lang }}{% else %}en{% endif %}{% endcapture %}
+    {% capture language_prefix %}{% if language != 'en' %}/{{ language }}/{% else %}/{% endif %}{% endcapture %}
+    <a class="sidebar-nav-item{% if page.url == site.t[language].home.url %} active{% endif %}" href="{{ site.t[language].home.url }}">{{ site.t[language].home.title }}</a>
 
     {% assign pages_list = site.pages | sort:"url" %}
     {% for node in pages_list %}
       {% if node.title != null %}
         {% if node.layout == "page" %}
-          <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{language_prefix}}{{ node.url | remove_first:'/' }}">{{ node.title }}</a>
+          <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ language_prefix }}{{ node.url | remove_first:'/' }}">{{ site.t[language][node.identifier].title }}</a>
         {% endif %}
       {% endif %}
     {% endfor %}
