update meta attribute language as described in the post

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
   <title>
-    {% if page.title == "Home" %}
-      {{ site.title }} &middot; {{ site.tagline }}
+    {% if site.t[page.lang][page.identifier] %}
+      {{ site.t[page.lang][page.identifier].title }} &middot; {{ site.title }}
     {% else %}
       {{ page.title }} &middot; {{ site.title }}
     {% endif %}
