--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -2,8 +2,12 @@
 ---
 
 @import "font-awesome";
+@import "base";
 
 .portal.users.card {
+  & {
+    border-color: #12A89D;
+  }
   .card.title {
     background: #12A89D;
     color: #fff;
@@ -29,9 +33,8 @@
   overflow: hidden;
   margin: 8px 0 16px 0;
   background: #FFF;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  border: 1px solid #eee;
   color: #272727;
-  border-radius: 2px;
 }
 .portal.card .card.title {
   display: block;
