--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,37 +4,41 @@
   {% include head.html %}
 
   <body>
-    <div class="container">
-      <div class="main">
-        <div class="masthead">
-          <div class="container">
-            <h3 class="masthead-title">
-              <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
-              <small>{{ site.tagline }}</small>
-            </h3>
-            {% for c in site.collections %}
-              {% assign docs=c[1].docs | where:'name', page.name | sort: 'lang' %}
-                {% for l in docs %}
-                  {% if l.lang != page.lang %}
-                  <a href="{{ l.url }}">{{ site.t[l.lang].language }}</a>
-                  {% endif %}
-                {% endfor %}
-            {% endfor %}
-          </div>
-        </div>
+    <nav id="bar">
+      <div class="container">
+        <a class="nav-link home" href="/">
+          <img width="64" height="45" src="/public/nav-icon-gray.png" alt="logo">
+        </a>
+        <a class="nav-link red" href="/about/">About</a>
+        <a class="nav-link orange" href="/faq/">FAQ</a>
+        <a class="nav-link yellow" href="http://blog.discourse.org">Blog</a>
+        <a class="nav-link green" href="http://try.discourse.org">Try It</a>
+        <a class="nav-link blue" href="https://payments.discourse.org/buy">Buy It</a>
+        <a class="nav-link grey" href="http://meta.discourse.org">Meta</a>
+      </div>
+    </nav>
 
-        <div class="row">
-          <div class="col-md-2 col-sm-3">
-            {% include sidebar.html lang=page.lang %}
-          </div>
-          <div class="col-md-10 col-sm-9">
-            <div class="main-content">
-              {{ content }}
-            </div>
+    <main class="container">
+      {% for c in site.collections %}
+        {% assign docs=c[1].docs | where:'name', page.name | sort: 'lang' %}
+          {% for l in docs %}
+            {% if l.lang != page.lang %}
+            <a href="{{ l.url }}">{{ site.t[l.lang].language }}</a>
+            {% endif %}
+          {% endfor %}
+      {% endfor %}
+      
+      <div class="row">
+        <div class="col-md-2 col-sm-3">
+          {% include sidebar.html lang=page.lang %}
+        </div>
+        <div class="col-md-10 col-sm-9">
+          <div class="main-content">
+            {{ content }}
           </div>
         </div>
       </div>
-    </div>
+    </main>
 
   </body>
 </html>
