--- a/_sass/card.scss
+++ b/_sass/card.scss
@@ -53,6 +53,13 @@
   }
 }
 
+.portal a {
+  text-decoration: none;
+  &:hover {
+    text-decoration: none;
+  }
+}
+
 .portal.list {
   margin: 0;
   padding: 0;
