--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,24 +1,6 @@
 <div class="sidebar" id="sidebar">
-  <nav class="sidebar-nav">
-    {% capture language %}{% if include.lang %}{{ include.lang }}{% else %}en{% endif %}{% endcapture %}
-    {% capture language_prefix %}{% if language != 'en' %}/{{ language }}/{% else %}/{% endif %}{% endcapture %}
-    <a class="sidebar-nav-item{% if page.url == site.t[language].home.url %} active{% endif %}" href="{{ site.t[language].home.url }}">{{ site.t[language].home.title }}</a>
-
-    {% assign pages_list = site.pages | sort:"url" %}
-    {% for node in pages_list %}
-      {% if node.title != null %}
-        {% if node.layout == "page" %}
-          <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ language_prefix }}{{ node.url | remove_first:'/' }}">{{ site.t[language][node.identifier].title }}</a>
-        {% endif %}
-      {% endif %}
-    {% endfor %}
-
-    <span class="sidebar-nav-item">v{{ site.version }}</span>
-  </nav>
-
-  <div class="sidebar-item">
-    <p>
-      &copy; {{ site.time | date: '%Y' }}. All rights reserved.
-    </p>
-  </div>
+  <ul>
+    {% assign c=site.collections[page.lang] %}
+    {{ site.collections }}
+  </ul>
 </div>
