add portal layout and extract header from layouts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,19 +4,7 @@
   {% include head.html %}
 
   <body>
-    <nav id="bar">
-      <div class="container">
-        <a class="nav-link home" href="/">
-          <img width="64" height="45" src="/public/nav-icon-gray.png" alt="logo">
-        </a>
-        <a class="nav-link red" href="/about/">About</a>
-        <a class="nav-link orange" href="/faq/">FAQ</a>
-        <a class="nav-link yellow" href="http://blog.discourse.org">Blog</a>
-        <a class="nav-link green" href="http://try.discourse.org">Try It</a>
-        <a class="nav-link blue" href="https://payments.discourse.org/buy">Buy It</a>
-        <a class="nav-link grey" href="http://meta.discourse.org">Meta</a>
-      </div>
-    </nav>
+    {% include header.html %}
 
     <main class="container">
       {% for c in site.collections %}
@@ -27,7 +15,7 @@
             {% endif %}
           {% endfor %}
       {% endfor %}
-      
+
       <div class="row">
         <div class="col-md-2 col-sm-3">
           {% include sidebar.html lang=page.lang %}
