add TODO: affix

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,6 @@
 <div class="sidebar" id="sidebar">
   <ul>
     {% assign c=site.collections[page.lang] %}
-    {{ site.collections }}
+    <!-- TODO: sidebar affix -->
   </ul>
 </div>
