list style in portal page

--- a/_includes/doclist.html
+++ b/_includes/doclist.html
@@ -6,7 +6,7 @@
 {% endfor %}
 
 {% for subsection in page.subsections %}
-  <section class="{{ subsection }}">
+  <section class="subsection {{ subsection }}">
     <h2>{{ subsection }}</h2>
     <ul>
       {% assign c=site.collections[page.lang] %}
