--- a/_layouts/portal.html
+++ b/_layouts/portal.html
@@ -10,9 +10,9 @@
       <section class="portal-header">
         <div class="container">
           <h1>{{ site.t[page.lang][page.section].title }}</h1>
-          <div class="description">
+          <p class="description">
             {{ site.t[page.lang][page.section].description }}
-          </div>
+          </p>
         </div>
       </section>
       <section class="portal-content">
