--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -4,3 +4,17 @@ $portal-administrators-main-bg-color: #0E76BD !default;
 $portal-designers-main-bg-color: #92278F !default;
 $portal-sysadmins-main-bg-color: #283890 !default;
 $portal-developers-main-bg-color: #231F20 !default;
+
+$portal-users-musthead-color: #70D67C !default;
+$portal-moderators-musthead-color: #75CFF5 !default;
+$portal-administrators-musthead-color: #4BABEA !default;
+$portal-designers-musthead-color: #E484E1 !default;
+$portal-sysadmins-musthead-color: #6178F5 !default;
+$portal-developers-musthead-color: #8A8A8A !default;
+
+$portal-users-anchor-color: #70D67C !default;
+$portal-moderators-anchor-color: #75CFF5 !default;
+$portal-administrators-anchor-color: #4BABEA !default;
+$portal-designers-anchor-color: #E484E1 !default;
+$portal-sysadmins-anchor-color: #6178F5 !default;
+$portal-developers-anchor-color: #8A8A8A !default;
