--- a/_sass/portal.scss
+++ b/_sass/portal.scss
@@ -1,32 +1,38 @@
 .portal-page.users .portal-header {
   @include linear-gradient(
-    scale-color($portal-users-main-bg-color, $lightness: -20%),
+    scale-color($portal-users-main-bg-color, $lightness: -40%),
     $portal-users-main-bg-color);
+  color: $portal-users-musthead-color;
 }
 .portal-page.moderators .portal-header {
   @include linear-gradient(
-    scale-color($portal-moderators-main-bg-color, $lightness: -20%),
+    scale-color($portal-moderators-main-bg-color, $lightness: -40%),
     $portal-moderators-main-bg-color);
+  color: $portal-moderators-musthead-color;
 }
 .portal-page.administrators .portal-header {
   @include linear-gradient(
-    scale-color($portal-administrators-main-bg-color, $lightness: -20%),
+    scale-color($portal-administrators-main-bg-color, $lightness: -40%),
     $portal-administrators-main-bg-color);
+  color: $portal-administrators-musthead-color;
 }
 .portal-page.designers .portal-header {
   @include linear-gradient(
-    scale-color($portal-designers-main-bg-color, $lightness: -20%),
+    scale-color($portal-designers-main-bg-color, $lightness: -40%),
     $portal-designers-main-bg-color);
+  color: $portal-designers-musthead-color;
 }
 .portal-page.sysadmins .portal-header {
   @include linear-gradient(
-    scale-color($portal-sysadmins-main-bg-color, $lightness: -20%),
+    scale-color($portal-sysadmins-main-bg-color, $lightness: -40%),
     $portal-sysadmins-main-bg-color);
+  color: $portal-sysadmins-musthead-color;
 }
 .portal-page.developers .portal-header {
   @include linear-gradient(
-    scale-color($portal-developers-main-bg-color, $lightness: -20%),
+    scale-color($portal-developers-main-bg-color, $lightness: -40%),
     $portal-developers-main-bg-color);
+  color: $portal-developers-musthead-color;
 }
 
 .portal-page .portal-header {
@@ -40,6 +46,7 @@
 }
 .portal-header .description {
   font-size: 24px;
+  font-weight: 300;
 }
 .subsection h2 {
   padding-bottom: 5px;
