--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,8 @@
 layout: default
 ---
 
-<div class="page">
-  <h1 class="page-title">{{ page.title }}</h1>
+{% assign directories=page.url | split: '/' %}
+<div class="documentation-page {{ directories[1] }}">
+  <h1 class="documentation-title">{{ page.title }}</h1>
   {{ content }}
 </div>
