--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -49,5 +49,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 body {
-  font-family: raleway, helvetica, sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  line-height: 1.5;
 }
