--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -12,9 +12,9 @@ $portal-designers-musthead-color: #E484E1 !default;
 $portal-sysadmins-musthead-color: #6178F5 !default;
 $portal-developers-musthead-color: #8A8A8A !default;
 
-$portal-users-anchor-color: #70D67C !default;
-$portal-moderators-anchor-color: #75CFF5 !default;
-$portal-administrators-anchor-color: #4BABEA !default;
-$portal-designers-anchor-color: #E484E1 !default;
-$portal-sysadmins-anchor-color: #6178F5 !default;
-$portal-developers-anchor-color: #8A8A8A !default;
+$portal-users-anchor-color: #32903E !default;
+$portal-moderators-anchor-color: #40778E !default;
+$portal-administrators-anchor-color: #045F9A !default;
+$portal-designers-anchor-color: #9C3399 !default;
+$portal-sysadmins-anchor-color: #31408E !default;
+$portal-developers-anchor-color: #695D5D !default;
