--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,5 +5,5 @@ layout: default
 {% assign directories=page.url | split: '/' %}
 <div class="documentation-page {{ directories[1] }}">
   <h1 class="documentation-title">{{ page.title }}</h1>
-  {{ content }}
+  <div class="documentation-content">{{ content }}</div>
 </div>
