Cleaned up Header navigation.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,11 +3,6 @@
     <a class="nav-link home" href="/">
       <img width="64" height="45" src="/public/nav-icon-gray.png" alt="logo">
     </a>
-    <a class="nav-link red" href="/about/">About</a>
-    <a class="nav-link orange" href="/faq/">FAQ</a>
-    <a class="nav-link yellow" href="http://blog.discourse.org">Blog</a>
-    <a class="nav-link green" href="http://try.discourse.org">Try It</a>
-    <a class="nav-link blue" href="https://payments.discourse.org/buy">Buy It</a>
-    <a class="nav-link grey" href="http://meta.discourse.org">Meta</a>
+    <a class="nav-link red" href="/about/">Home</a>
   </div>
 </nav>
