Fixed header link

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,6 +3,6 @@
     <a class="nav-link home" href="/">
       <img width="45" height="45" src="/public/nav-icon-gray.png" alt="logo">
     </a>
-    <a class="nav-link red" href="/about/">Home</a>
+    <a class="nav-link red" href="/">Home</a>
   </div>
 </nav>
