--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,5 +5,14 @@ layout: default
 {% assign directories=page.url | split: '/' %}
 <div class="documentation-page {{ directories[1] }}">
   <h1 class="documentation-title">{{ page.title }}</h1>
-  <div class="documentation-content">{{ content }}</div>
+
+  <div class="row">
+    <div class="col-md-4 col-sm-4">
+      {% include sidebar.html %}
+    </div>
+    <div class="col-md-8 col-sm-8">
+      <div class="documentation-content">{{ content }}</div>
+    </div>
+  </div>
+
 </div>
