--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,15 +2,14 @@
 layout: default
 ---
 
-  <div class="row">
-    <div class="col-md-4 col-sm-4">
-      {% include sidebar.html %}
-    </div>
-    <div class="col-md-8 col-sm-8">
-      {% assign directories=page.url | split: '/' %}
-      <div class="documentation-page {{ directories[1] }}">
-        <h1 class="documentation-title">{{ page.title }}</h1>
-        <div class="documentation-content">{{ content }}</div>
-      </div>
-    </div>
+<div class="sidebar">
+  {% include sidebar.html %}
+</div>
+<div class="content-wrapper">
+  {% assign directories=page.url | split: '/' %}
+  <div class="content documentation-page {{ directories[1] }}">
+    <h1 class="documentation-title">{{ page.title }}</h1>
+    <div class="documentation-content">{{ content }}</div>
   </div>
+  {% include footer.html %}
+</div>
