--- a/_sass/bar.scss
+++ b/_sass/bar.scss
@@ -1,6 +1,8 @@
+$bar-height: 48px;
+
 #bar {
   width: 100%;
-  height: 48px;
+  height: $bar-height;
   background: #1b1f20;
 }
 
@@ -8,7 +10,7 @@
   min-width: 100px;
   text-align: center;
   font-size: 16px;
-  line-height: 48px;
+  line-height: $bar-height;
   float: left;
   color: #fff;
   text-decoration: none;
