--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
-  <!-- Enable responsiveness on mobile devices-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
   <title>
@@ -15,12 +14,10 @@
     {% endif %}
   </title>
 
-  <!-- CSS -->
   <link rel="stylesheet" href="{{ site.baseurl }}/public/css/syntax.css">
   <link rel="stylesheet" href="{{ site.baseurl }}/public/css/main.css">
 
-  <!-- Icons -->
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}/public/apple-touch-icon-precomposed.png">
   <link rel="shortcut icon" href="{{ site.baseurl }}/public/favicon.ico">
-
+  <link rel="icon" href="{{ site.baseurl }}/public/favicon.png">
+  <link rel="apple-touch-icon" href="{{ site.baseurl }}/public/favicon.png">
 </head>
