--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,24 +1,7 @@
-<!DOCTYPE html>
-<html lang="{{ page.lang }}">
+---
+layout: base
+---
 
-  {% include head.html %}
+{{ content }}
 
-  <body>
-    {% include header.html %}
-
-    <main class="container">
-      {% for c in site.collections %}
-        {% assign docs=c[1].docs | where:'name', page.name | sort: 'lang' %}
-          {% for l in docs %}
-            {% if l.lang != page.lang %}
-            <a href="{{ l.url }}">{{ site.t[l.lang].language }}</a>
-            {% endif %}
-          {% endfor %}
-      {% endfor %}
-
-      {{ content }}
-    </main>
-
-    {% include footer.html %}
-  </body>
-</html>
+{% include footer.html %}
