Improve layout for article content
- pre/code content no longer causes width of page to expand
- pre/code content can be scrolled horizontally
- image content now adjusts to width of page
- removed bootstrap dependency

[#15]

--- a/_includes/portal-language-switcher.html
+++ b/_includes/portal-language-switcher.html
@@ -1,5 +1,7 @@
-<h1>{{ site.t[page.lang].language_title }}</h1>
-{% for language in site.t %}
-  {% assign code = language[0] %}
-  <a href="{{ site.t[code][page.identifier].url }}">{{ language[1].language }}</a>
-{% endfor %}
+<div>
+  <h1>{{ site.t[page.lang].language_title }}</h1>
+  {% for language in site.t %}
+    {% assign code = language[0] %}
+    <a href="{{ site.t[code][page.identifier].url }}">{{ language[1].language }}</a>
+  {% endfor %}
+</div>
