--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,7 +7,7 @@ layout: base
 </div>
 <div class="content-wrapper">
   {% assign directories=page.url | split: '/' %}
-  <div class="content documentation-page {{ directories[1] }}">
+  <div class="documentation-page {{ directories[1] }}">
     <h1 class="documentation-title">{{ page.title }}</h1>
     <div class="documentation-content">{{ content }}</div>
   </div>
