--- a/_sass/documentation.scss
+++ b/_sass/documentation.scss
@@ -5,6 +5,7 @@
 
 .documentation-content {
   font-size: 14px;
+  max-width: 800px;
   & h1 {
     font-size: 2em;
     border-bottom: 1px solid #c1c1c1;
