--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -18,3 +18,6 @@ $portal-administrators-anchor-color: #045F9A !default;
 $portal-designers-anchor-color: #9C3399 !default;
 $portal-sysadmins-anchor-color: #31408E !default;
 $portal-developers-anchor-color: #695D5D !default;
+
+$sidebar-width: 400px;
+$content-padding: 40px;
