--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -1,47 +1,3 @@
-// Core variables and mixins
-@import "bootstrap/variables";
-@import "bootstrap/mixins";
-
-// Reset and dependencies
-@import "bootstrap/normalize";
-@import "bootstrap/print";
-
-// Core CSS
-@import "bootstrap/scaffolding";
-@import "bootstrap/type";
-@import "bootstrap/code";
-@import "bootstrap/grid";
-@import "bootstrap/tables";
-@import "bootstrap/forms";
-@import "bootstrap/buttons";
-
-// Components
-@import "bootstrap/component-animations";
-@import "bootstrap/dropdowns";
-@import "bootstrap/button-groups";
-@import "bootstrap/input-groups";
-@import "bootstrap/navs";
-@import "bootstrap/navbar";
-@import "bootstrap/breadcrumbs";
-@import "bootstrap/pagination";
-@import "bootstrap/pager";
-@import "bootstrap/labels";
-@import "bootstrap/badges";
-@import "bootstrap/jumbotron";
-@import "bootstrap/thumbnails";
-@import "bootstrap/alerts";
-@import "bootstrap/progress-bars";
-@import "bootstrap/media";
-@import "bootstrap/list-group";
-@import "bootstrap/panels";
-@import "bootstrap/responsive-embed";
-@import "bootstrap/wells";
-@import "bootstrap/close";
-
-// Utility classes
-@import "bootstrap/utilities";
-@import "bootstrap/responsive-utilities";
-
 h1, h2, h3, h4, h5, h6 {
   font-family: "pragmatica", arial, sans-serif;
   margin: 10px 0;
@@ -52,6 +8,7 @@ body {
   font-style: normal;
   line-height: 1.5;
   font-weight: 300;
+  margin: 0;
 }
 
 * {
@@ -62,15 +19,13 @@ body {
   margin-top: 50px;
   color: #bababa;
   text-align: center;
+  border-top: 1px solid #c1c1c1;
+  padding-top: 30px;
 }
 #footer a {
   color: #bababa;
   font-family: 'Open Sans',Arial,sans-serif;
   text-decoration: none;
-}
-#footer .container {
-  border-top: 1px solid #c1c1c1;
-  padding-top: 30px;
 }
 
 .content-wrapper {
@@ -79,9 +34,9 @@ body {
   top: $bar-height;
   bottom: 0;
   left: $sidebar-width;
+  padding: 0 $content-padding 0 $content-padding;
 }
 
-.content {
-  max-width: 800px;
-  padding: 0 40px 0 40px;
+img {
+  @include adjust-max-width-at-breakpoints();
 }
