--- a/_sass/code.scss
+++ b/_sass/code.scss
@@ -1,3 +1,17 @@
+// copied from bootstrap
+
+$code-color:                  #c7254e !default;
+$code-bg:                     #f9f2f4 !default;
+
+$kbd-color:                   #fff !default;
+$kbd-bg:                      #333 !default;
+
+$pre-bg:                      #f5f5f5 !default;
+$pre-color:                   #222 !default;
+$pre-border-color:            #ccc !default;
+
+$font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace !default;
+
 //
 // Code (inline and block)
 // --------------------------------------------------
@@ -17,7 +31,7 @@ code {
   font-size: 90%;
   color: $code-color;
   background-color: $code-bg;
-  border-radius: $border-radius-base;
+  border-radius: 4px;
 }
 
 // User input typically entered via keyboard
@@ -26,7 +40,7 @@ kbd {
   font-size: 90%;
   color: $kbd-color;
   background-color: $kbd-bg;
-  border-radius: $border-radius-small;
+  border-radius: 3px;
   box-shadow: inset 0 -1px 0 rgba(0,0,0,.25);
 
   kbd {
@@ -40,30 +54,21 @@ kbd {
 // Blocks of code
 pre {
   display: block;
-  padding: (($line-height-computed - 1) / 2);
-  margin: 0 0 ($line-height-computed / 2);
-  font-size: ($font-size-base - 1); // 14px to 13px
-  line-height: $line-height-base;
   word-break: break-all;
-  word-wrap: break-word;
   color: $pre-color;
   background-color: $pre-bg;
   border: 1px solid $pre-border-color;
-  border-radius: $border-radius-base;
+  border-radius: 4px;
+  overflow-x: scroll;
+  @include adjust-max-width-at-breakpoints();
 
   // Account for some code outputs that place code tags in pre tags
   code {
     padding: 0;
     font-size: inherit;
     color: inherit;
-    white-space: pre-wrap;
     background-color: transparent;
     border-radius: 0;
+    overflow-x: scroll;
   }
-}
-
-// Enable scrollable blocks of code
-.pre-scrollable {
-  max-height: $pre-scrollable-max-height;
-  overflow-y: scroll;
 }
