--- a/_sass/sidebar.scss
+++ b/_sass/sidebar.scss
@@ -1,5 +1,3 @@
-$sidebar-width: 400px;
-
 .sidebar {
   font-family: "PT Sans", Helvetica, Arial, sans-serif;
   position: absolute;
@@ -7,14 +5,23 @@ $sidebar-width: 400px;
   top: $bar-height;
   left: 0;
   bottom: 0;
-  width: $sidebar-width;
-  padding: 0 40px 0 40px;
+  width: $sidebar-width - ($content-padding * 2);
+  padding: 0 $content-padding 0 $content-padding;
   background-color: #F1F1F1;
 }
 
 /* Sidebar content */
 .sidebar a {
   font-weight: normal;
+  text-decoration: none;
+  color: #337ab7;
+
+  &:visited {
+  }
+
+  &:hover {
+    text-decoration: underline;
+  }
 }
 
 .sidebar-item {
